--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "accesscontrol": "^2.2.1",
     "body-parser": "1.15.0",
     "cors": "2.7.1",
+    "dotenv": "^6.0.0",
     "ejs": "2.4.1",
     "errorhandler": "1.4.3",
     "express": "4.13.4",
@@ -35,6 +36,7 @@
     "passport-local": "1.0.0",
     "request": "2.69.0",
     "slug": "0.9.1",
+    "stripe": "^6.12.1",
     "underscore": "1.8.3"
   },
   "devDependencies": {
